@@ -10,6 +10,9 @@
     - Add -mils and -color as options for barcodes.  Reset linedash so
       that barcodes are always solid lines (patch by Erelen).
 
+    - [RT #98549] Rename meterlimit to miterlimit (patch by Phil
+      Perry).
+
 
 2.025     2015-09-23
 
